Updates to glossary.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </section>
       <section id="ethiopic_eras">
       <h3>In-Scope Publishing Eras</h3>
-      <p>While Ethiopic documents can be characterized under a number of time periods, we discern only two gross eras in this document. <a href="#term.classical-ethiopic" class="termref">Classical Ethiopic</a> encompases the layout requirements found in the documents of the first printing presses and coming into fruition under the reign of Emperor Haile Selassie.  While not the focus of this document, “Classical Ethiopic” also encompasses handwritten manuscripts whose practices are present in early publishing. This era is characterized more by the influences of the Ge'ez tradition as embodied by the Ethiopian Orthodox Church with respect to spelling conventions, syntax and punctuation use, <a href="#term.wordspace" class="termref">Ethiopic Wordspace</a> and numeral system preference. Also featuring less variation in layout practice which is likely the result of having fewer publishing houses in operation.</p>
+      <p>While Ethiopic documents can be characterized under a number of time periods, we discern only two gross eras herein. <a href="#term.classical-ethiopic" class="termref">Classical Ethiopic</a> encompases the layout requirements found in the documents of the first printing presses and coming into fruition under the reign of Emperor Haile Selassie.  While not the focus of this document, “Classical Ethiopic” also encompasses handwritten manuscripts whose practices are present in early publishing. This era is characterized more by the influences of the Ge'ez tradition as embodied by the Ethiopian Orthodox Church with respect to spelling conventions, syntax and punctuation use, <a href="#term.wordspace" class="termref">Ethiopic Wordspace</a> and numeral system preference. Also featuring less variation in layout practice which is likely the result of having fewer publishing houses in operation.</p>
       <p>The Classical Ethiopic era is followed by  <a href="#term.modern-ethiopic" class="termref">Modern Ethiopic</a> spanning from the post-Imperial period up until the present day. Modern Ethiopic practices are characterized by looser spelling conventions, the preference change toward whitespace and western numerals, more variation in layout styles  
 and in some cases limitations imposed by desktop publishing software designed for Western markets.</p>
 
@@ -1339,7 +1339,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <p><em>Page and section numbering can be discussed here.  The user (author) should be to set the numeral system with a CSS attribute. A tool tip to 
            over an ethiopic page number that presents the western equivalent would be useful.  Are there any rules on page number position?</em></p>
     <p><em>Page margin differences?  A special case: many religious books have an extra large lower margin to make it easier to hold the book with two hands
-           while not obscuring the text</em></p>
+           while not obscuring the text (i.e. the 1-2-4 margin rule).</em></p>
 
 <section id="h_preface_page_numbering">
   <h3>Preface Page Numbering</h3>
@@ -1546,35 +1546,42 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td lang="ti">TBD</td>
         <td>The standard length of the line; ie. column width or width of the overall textblock.</td>
       </tr>
+      <tr id="term.wordspace">
+        <td>Ethiopic Wordspace</td>
+        <td lang="am">ሁለት ነጥብ</td>
+        <td lang="ti">ክልተ ነጥቢ</td>
+        <td>The printed word separator in Ethiopic literature depicted by two vertical dots (U+1361).</td>
+      </tr>
       <tr id="term.ethiopicized">
         <td>Ethiopicized</td>
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
-        <td lang="ti">TBD</td>
+        <td>The sytlization of western symbols (usually puncutation and numerals) to match the strokes and weight of an Ethiopic typeface.</td>
       </tr>
       <tr id="term.classical-ethiopic">
         <td>Classical Ethiopic</td>
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
-        <td>TBD</td>
+        <td>In the scope of this specification Classical Ethiopic refers to the set of practices observed
+        in the mechanic printing of Ethiopian and Eritrean literature through the end of the imperial era.
+        Literature at the start of this era begins as an outgrowth of scribal practices and in the the later half
+        is more uniform in layout and editorial quality which is likely the result of state control over publishing.
+        </td>
       </tr>
       <tr id="term.modern-ethiopic">
         <td>Modern Ethiopic</td>
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
-        <td>TBD</td>
-      </tr>
-      <tr id="term.wordspace">
-        <td>wordspace</td>
-        <td lang="am">TBD</td>
-        <td lang="ti">TBD</td>
-        <td>TBD</td>
+        <td>Ethiopic manuscripts published primarily after the reign of Emperor Haile Selassie where
+            writing practices have become less adherent to the Ge'ez tradition, more pragmatic so as
+            to fascilitate the constraints and limitations imposed by mass media.
+        </td>
       </tr>
       <tr id="term.yaredic-zaima-notation">
         <td>Yaredic Zaima Notation</td>
-        <td lang="am">TBD</td>
+        <td lang="am">ያሬዳዊ ዜማ ምልክቶቻ</td>
         <td lang="ti">TBD</td>
-        <td>TBD</td>
+        <td>The system of marking intonation in Ge'ez hymnody devised by the 6<sup>th</sup> century Saint Yared of Axum.</td>
       </tr>
     </tbody>
   </table>
