Minor change to add "ግዕዝ" as the Amharic and Tigrinya translation of "Ge'ez".

--- a/index.html
+++ b/index.html
@@ -1524,8 +1524,8 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <tbody>
       <tr id="term.geez">
         <td>Ge'ez</td>
-        <td lang="am">TBD</td>
-        <td lang="ti">TBD</td>
+        <td lang="am">ግዕዝ</td>
+        <td lang="ti">ግዕዝ</td>
         <td>The name of both the ancient Semitic language of northern Ethiopia and Eritrea as well as the name of the corresponding syllabic writing system.  Also known as “Ethiopic”. It survives today as the liturgical language language of the Eritrean and Ethiopian Orthodox Chuches.</td>
       </tr>
       <tr id="def_text_block">
