fixed a typo in the numeral vertical alignment section.

--- a/index.html
+++ b/index.html
@@ -408,9 +408,9 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <p><em>Issues:</em>
            <ol><em>
              <li>Are the vertical alignment rules of Roman or Coptic numerals appropriate (and what are they)?</li>
-             <li>In what layout context is right jufication appropriate?</li>
-             <li>In what layout context is decimal place jufication appropriate?</li>
-             <li>In what layout context is left jufication appropriate?</li>
+             <li>In what layout context is right justification appropriate?</li>
+             <li>In what layout context is decimal place justification appropriate?</li>
+             <li>In what layout context is left justification appropriate?</li>
            </em></ol>
         </p>
     </section>
