--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     	<h4>Ethiopic Gemination Mark (ጥበቅ) Vertical Positioning</h4>
         <p>The Ethiopic gemination mark, ጥበቅ, is almost universally found at a fixed height above the baseline in typeset literature. The mark's position must
         then be fixed so that it remains above the tallest Ethiopic letter symbol; this produces a variable height gap between the top of the letter and the mark.
-        Conversely, when the symbol is hand written (often above typeset text) the mark will be found at a varialbe height above the baseline and demonstrating
+        Conversely, when the symbol is hand written (often above typeset text) the mark will be found at a variable height above the baseline and demonstrating
         a fixed height above the letter symbol.
         Quite possibly the former style is an artifact of a limitation of the layout technology employed, and the later representative of an author's
         desired rendering.</p>
