typo fix: Interenet => Internet

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <section id="ethiopicized_punctuation">
         <h4>Ethiopicized Punctuation</h4>
         <p>Modern Ethiopic borrows a number of foreign symbols to denote currency, express emphasis, time, mathematics, or communicate with
-        Interenet protocols (e.g. "@" , "://"). 
+        Internet protocols (e.g. "@" , "://"). 
     	The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
     	<p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code></p>
     	<p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
