Typo fix in glossary. Forgot to note in previous commit that that a references section has been added.

--- a/index.html
+++ b/index.html
@@ -1639,7 +1639,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
       </tr>
       <tr id="term.tbd-1">
         <td>TBD</td>
-        <td lang="am">መታሰቢያ (same as "መሳሰቢያ"</td>
+        <td lang="am">መታሰቢያ (same as "መሳሰቢያ"?}</td>
         <td lang="ti">መታሓሳሰቢ</td>
         <td></td>
       </tr>
