Adding inline reference to the Haddis Alemayehu citation. Links from citations to references will be needed in a future update.

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
       	  <dd>Ethiopic wordspace will precede a right-side enclosing symbol but not follow it. In these cases white space generally appears after
           the Latin punctuation, this whitespace is however observed as an artifact of justification spacing and does not demonstrate an inserted space symbol.
           The figure in this document illustrating <a href="#fig_justification_centered">centered wordspace justification style</a> provides an example of white space
-          after quotation.  ፍቅር እስከ መቃብር by Haddis Alemayehu is also an easily found reference here.
+          after quotation.  ፍቅር እስከ መቃብር by Haddis Alemayehu (Alemayehu, 1965 (1958 EC)) is also an easily found reference here.
           </dd>
       	  <dt>Right-Side Enclosing Symbol Convention 3</dt>
           <dd>Ethiopic wordspace does not precede or follow the right-side enclosing symbol. This style is observed but some width of white space will appear
