Added not on alternative translation in glossary section.

--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td>The system of marking intonation in Ge'ez hymnody devised by the 6<sup>th</sup> century Saint Yared of Axum.</td>
       </tr>
       <tr id="term.acknolwedgment">
-        <td>Acknowledgment</td>
+        <td>Acknowledgment (or "Dedication"?)</td>
         <td lang="am">ምስጋና</td>
         <td lang="ti">TBD</td>
         <td></td>
