Adding "Glossary" and "References" to the glossary section.

--- a/index.html
+++ b/index.html
@@ -1613,6 +1613,12 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td lang="ti">TBD</td>
         <td></td>
       </tr>
+      <tr id="term.glossary">
+        <td>Glossary</td>
+        <td lang="am">ሙዳዬ ቃላት</td>
+        <td lang="ti">TBD</td>
+        <td></td>
+      </tr>
       <tr id="term.index">
         <td>Index</td>
         <td lang="am">መጠቍ ም</td>
@@ -1622,6 +1628,12 @@ and in some cases limitations imposed by desktop publishing software designed fo
       <tr id="term.introduction">
         <td>Introduction</td>
         <td lang="am">መግቢያ</td>
+        <td lang="ti">TBD</td>
+        <td></td>
+      </tr>
+      <tr id="term.references">
+        <td>References (or "Bibliography"?)</td>
+        <td lang="am">ዋቢ መጻሕፍት</td>
         <td lang="ti">TBD</td>
         <td></td>
       </tr>
