Adding reference entry for the ecclesiastical emphasis image.

--- a/index.html
+++ b/index.html
@@ -1751,7 +1751,19 @@ H. Ludolf.  L.III.c.5 Paragraph 35.  Frankfurt: prostat apud Joh. David Zunne. 1
      <p><em>Source Citation:</em><br/>
      <span style="margin-left:2em;">
      <cite>መጽሐፈ፡ሰዋስው፡ወግስ፡ወመዝገበ፡ቃላት፡ሐዲስ</cite>፣
-     ኪዳነ፡ወልድ፡ክፍሌ። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።
+     ኪዳነ፡ወልድ፡ክፍሌ። ገጾች ፷፭ እና ፻፶፱። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።
+     </span></p>
+  </dd>
+  <dt>Weldemariam, 1995</dt>
+  <dd><p><em>Transcribed Citation:</em><br/>
+     <span style="margin-left:2em;">
+     <cite>Maṣḥafa Ṣalot Mes Ser'ate Kiddase Betegreññā</cite>,
+     B. Weldemariam. Page 32. Mahbere Haawaryat F-Ha Bet Mahtem Tehatmet, 1995 (1988 EC). Asmera.
+     </span></p>
+     <p><em>Source Citation:</em><br/>
+     <span style="margin-left:2em;">
+     <cite>መጽሐፈ ጸሎት ምስ ሥርዓተ ቅዳሴ ብትግርኛ</cite>፣
+     በርሀ ወልደማርያም። ገጽ ፴፪። ማኅበረ ሐዋርያት ፍ-ሃ ቤት ማኅተም ተኀትመት፣ ፲፱፻፹፰። አሥመራ።
      </span></p>
   </dd>
 </dl>
