Updates to the glossary section for Tigrinya entries.

--- a/index.html
+++ b/index.html
@@ -1586,7 +1586,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
       <tr id="term.acknolwedgment">
         <td>Acknowledgment (or "Dedication"?)</td>
         <td lang="am">ምስጋና</td>
-        <td lang="ti">TBD</td>
+        <td lang="ti">ምስጋና</td>
         <td></td>
       </tr>
       <tr id="term.authors-note">
@@ -1622,7 +1622,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
       <tr id="term.index">
         <td>Index</td>
         <td lang="am">መጠቍ ም</td>
-        <td lang="ti">TBD</td>
+        <td lang="ti">ኃባሪ ኣርእስቲ ገጽ</td>
         <td></td>
       </tr>
       <tr id="term.introduction">
