Updates to glossary and a Document Structure section started.

--- a/index.html
+++ b/index.html
@@ -1351,6 +1351,26 @@ and in some cases limitations imposed by desktop publishing software designed fo
 <section id="h_document">
       <h2>Document</h2>
     <p><em>Discuss: Distinguished requirements: book/ebook/page, Inter-page spacing, first and last pages, TOC and lists, indexes, appendices (e.g. bibliographies, glossaries), endnotes.</em></p>
+
+<section id="h_document_structure">
+  <h3>Document Structure</h3>
+<p>
+መጽሐፍ<br/>
+&nbsp;&nbsp;አርእስት<br/>
+&nbsp;&nbsp;መታሰቢያ<br/>
+&nbsp;&nbsp;መስታወሻ<br/>
+&nbsp;&nbsp;ምስጋና<br/>
+&nbsp;&nbsp;ማውጫ<br/>
+&nbsp;&nbsp;ቅድመ መቅድም<br/>
+&nbsp;&nbsp;መቅድም<br/>
+&nbsp;&nbsp;መግቢያ<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ 1<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ 2<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ 3<br/>
+&nbsp;&nbsp;ሙዳዬ ቃላት<br/>
+&nbsp;&nbsp;ዋቢ መጻሕፍት<br/>
+&nbsp;&nbsp;መጠቍ ም
+</p>
 </section>
     
     
@@ -1584,15 +1604,21 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td>The system of marking intonation in Ge'ez hymnody devised by the 6<sup>th</sup> century Saint Yared of Axum.</td>
       </tr>
       <tr id="term.acknolwedgment">
-        <td>Acknowledgment (or "Dedication"?)</td>
+        <td>Acknowledgment</td>
         <td lang="am">ምስጋና</td>
         <td lang="ti">ምስጋና</td>
         <td></td>
       </tr>
-      <tr id="term.authors-note">
+      <tr id="term.tbd-2">
         <td>Author's Note</td>
-        <td lang="am">ማስታወቂያ (same as "ማስተዋወቂያ"?)</td>
+        <td lang="am">መስታወሻ or የአሳታሚው ማስታወሻ</td>
         <td lang="ti"></td>
+        <td></td>
+      </tr>
+      <tr id="term.references">
+        <td>Bibliography</td>
+        <td lang="am">ዋቢ መጻሕፍት</td>
+        <td lang="ti">TBD</td>
         <td></td>
       </tr>
       <tr id="term.chapter">
@@ -1601,15 +1627,15 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td lang="ti">TBD</td>
         <td></td>
       </tr>
-      <tr id="term.preface">
-        <td>Preface (?)</td>
-        <td lang="am">ቅድመ መቅድም</td>
-        <td lang="ti">TBD</td>
+      <tr id="term.dedication">
+        <td>Dedication</td>
+        <td lang="am">መታሰቢያ</td>
+        <td lang="ti">መታሓሳሰቢ</td>
         <td></td>
       </tr>
       <tr id="term.foreward">
         <td>Foreward</td>
-        <td lang="am">መቅድም </td>
+        <td lang="am">ቅድመ መቅድም</td>
         <td lang="ti">TBD</td>
         <td></td>
       </tr>
@@ -1631,15 +1657,27 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td lang="ti">TBD</td>
         <td></td>
       </tr>
-      <tr id="term.references">
-        <td>References (or "Bibliography"?)</td>
-        <td lang="am">ዋቢ መጻሕፍት</td>
+      <tr id="term.introduction">
+        <td>ISBN</td>
+        <td lang="am">መዓመቍ (የመጽሐፉ ዓለምአቀፍ መለያ ቍጥር)</td>
+        <td lang="ti">TBD</td>
+        <td></td>
+      </tr>
+      <tr id="term.part">
+        <td>Part</td>
+        <td lang="am">ክፍል</td>
+        <td lang="ti">TBD</td>
+        <td></td>
+      </tr>
+      <tr id="term.preface">
+        <td>Preface</td>
+        <td lang="am">መቅድም  (sometimes "መግለጫ " in older books)</td>
         <td lang="ti">TBD</td>
         <td></td>
       </tr>
       <tr id="term.table-of-contents">
         <td>Table of Contents</td>
-        <td lang="am">ማውጫ  (same as "መክሥተ አርእስት"?)</td>
+        <td lang="am">ማውጫ <!-- (same as "መክሥተ አርእስት"?) --></td>
         <td lang="ti">TBD</td>
         <td></td>
       </tr>
@@ -1651,17 +1689,16 @@ and in some cases limitations imposed by desktop publishing software designed fo
       </tr>
       <tr id="term.tbd-1">
         <td>TBD</td>
-        <td lang="am">መታሰቢያ (same as "መሳሰቢያ"?}</td>
-        <td lang="ti">መታሓሳሰቢ</td>
-        <td></td>
-      </tr>
-      <tr id="term.tbd-2">
-        <td>TBD</td>
-        <td lang="am">መስታወሻ</td>
+        <td lang="am">መሳሰቢያ</td>
         <td lang="ti"></td>
         <td></td>
       </tr>
-      <!-- መግለጫ -->
+      <tr id="term.tbd-2">
+        <td>TBD "Advertisement" resolve this with "Author's Note"</td>
+        <td lang="am">ማስታወቂያ (sometimes "ማስተዋወቂያ")</td>
+        <td lang="ti"></td>
+        <td></td>
+      </tr>
     </tbody>
   </table>
 </section>
