Adding more hierarchy to document structure section.

--- a/index.html
+++ b/index.html
@@ -1364,9 +1364,16 @@ and in some cases limitations imposed by desktop publishing software designed fo
 &nbsp;&nbsp;ቅድመ መቅድም<br/>
 &nbsp;&nbsp;መቅድም<br/>
 &nbsp;&nbsp;መግቢያ<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ 1<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ 2<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ 3<br/>
+&nbsp;&nbsp;ክፍል ፩<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ ፩<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ ፪<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ ፫<br/>
+&nbsp;&nbsp;ክፍል ፪<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ ፬<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ ፭<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;ምዕራፍ ፮<br/>
+&nbsp;&nbsp;ክፍል ፫<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;⋮<br/>
 &nbsp;&nbsp;ሙዳዬ ቃላት<br/>
 &nbsp;&nbsp;ዋቢ መጻሕፍት<br/>
 &nbsp;&nbsp;መጠቍ ም
