Updates to glossary to move comments into 4 column.

--- a/index.html
+++ b/index.html
@@ -1618,9 +1618,9 @@ and in some cases limitations imposed by desktop publishing software designed fo
       </tr>
       <tr id="term.tbd-2">
         <td>Author's Note</td>
-        <td lang="am">መስታወሻ or የአሳታሚው ማስታወሻ</td>
+        <td lang="am">መስታወሻ</td> 
         <td lang="ti"></td>
-        <td></td>
+        <td>Also የአሳታሚው ማስታወሻ</td>
       </tr>
       <tr id="term.references">
         <td>Bibliography</td>
@@ -1666,9 +1666,9 @@ and in some cases limitations imposed by desktop publishing software designed fo
       </tr>
       <tr id="term.introduction">
         <td>ISBN</td>
-        <td lang="am">መዓመቍ (የመጽሐፉ ዓለምአቀፍ መለያ ቍጥር)</td>
+        <td lang="am">መዓመቍ</td>
         <td lang="ti">TBD</td>
-        <td></td>
+        <td>የመጽሐፉ ዓለምአቀፍ መለያ ቍጥር</td>
       </tr>
       <tr id="term.part">
         <td>Part</td>
@@ -1678,15 +1678,15 @@ and in some cases limitations imposed by desktop publishing software designed fo
       </tr>
       <tr id="term.preface">
         <td>Preface</td>
-        <td lang="am">መቅድም  (sometimes "መግለጫ " in older books)</td>
+        <td lang="am">መቅድም</td>
         <td lang="ti">TBD</td>
-        <td></td>
+        <td>Sometimes "መግለጫ " in older books</td>
       </tr>
       <tr id="term.table-of-contents">
         <td>Table of Contents</td>
-        <td lang="am">ማውጫ <!-- (same as "መክሥተ አርእስት"?) --></td>
+        <td lang="am">ማውጫ </td>
         <td lang="ti">TBD</td>
-        <td></td>
+        <td>Same as "መክሥተ አርእስት"?</td>
       </tr>
       <tr id="term.title">
         <td>Title</td>
@@ -1701,10 +1701,10 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td></td>
       </tr>
       <tr id="term.tbd-2">
-        <td>TBD "Advertisement" resolve this with "Author's Note"</td>
-        <td lang="am">ማስታወቂያ (sometimes "ማስተዋወቂያ")</td>
+        <td>TBD</td>
+        <td lang="am">ማስታወቂያ</td>
         <td lang="ti"></td>
-        <td></td>
+        <td>"Advertisement" resolve this with "Author's Note". Sometimes seen as "ማስተዋወቂያ".</td>
       </tr>
     </tbody>
   </table>
