Added section on emphasis of wordspace following emphasized text.

--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 -->
    </section>
 
-    <section id="lists_and_counters">
+    <section id="ecclesiastical_emphasis">
       <h3>Ecclesiastical Emphasis</h3>
       <p>In religous literature, certain words or phrases with a spiritual or more holy aspect may be colored in red.  The practice is context dependent and a word that will appear in red in one sentence may not be red in the next (or elsewhere in the same sentence).</p>
       <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600" border="1"/>
@@ -1326,6 +1326,17 @@ and in some cases limitations imposed by desktop publishing software designed fo
       <ol>
         <li>What shade of red?</li>
         <li>What is the preferred substitute for red when only monochrome publishing is available?</li>
+      </ol>
+      </em></p>
+   </section>
+
+    <section id="emphasis_with_wordspace">
+      <h3>Emphasis With Ethiopic Wordspace</h3>
+      <p>As a rule, a wordspace following a word that is emphasized in any way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge'ez literature tradition.
+      </p>
+      <p><em>Issues:
+      <ol>
+        <li>Does this rule make aesthetic sense in full justification with wordspace in centered posititioning style? In Ge'ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
       </ol>
       </em></p>
    </section>
@@ -1706,6 +1717,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td lang="ti"></td>
         <td>"Advertisement" resolve this with "Author's Note". Sometimes seen as "ማስተዋወቂያ".</td>
       </tr>
+<!-- መልመጃ -->
     </tbody>
   </table>
 </section>
